	. made it configurable in the options dialog
  * general: possibility to use the default printer on first print instead
    of the last printer used. Configurable in the options dialog. Now, I
    should probably re-add the "Set as default" button.
  * print dialog: re-added the "Set as default" button in the case the
    user default printer is used on first print instead of the last used
    printer (it does make sense again to have it)
  * general: added a small (but useful) information string about the
    current plugin below the plugin combobox (ex: in CUPS, shows the current
    server:port).

02/04/2002 Michael Goffioul <goffioul@imec.be>
  * general:
  	. fixed various conflicting shortcuts
	. made KMVirtualManager inherit from KPReloadObject to force instance
	  reloading when something has changed
  * print dialog: added buttons to move files up and down
  * CUPS: added a generic job tagging mechanism in the form of an additional
    tab in the print dialog. It contain a 2-columns table where custom tags
    can be added. Read-only in job editing mode (hope to change that soon).

03/04/2002 Michael Goffioul <goffioul@imec.be>
  * manager: show instances as children of the real printer in the tree view.
    No instance management is possible from the tree view itself. The user
    still has to use the "Instances" tab.
  * ioslave: added support for print jobs browsing, per printer or for all
    printers together (-> print:/jobs)

04/04/2002 Michael Goffioul <goffioul@imec.be>
  * ioslave: added support to view the driver of a printer in HTML form
    (print:/printers/lp1?driver)
  * CUPS: allows editing of page-ranges for pending jobs, work around
    small problem in CUPS.
  * LPR:
  	. added a "ppdfile" field in printcap file for Foomatic drivers
	  with LPRng. This should make printers created with KDEPrint
	  work with gpr (from GNUlpr)
	. added support for "bool" directives in Foomatic drivers