@@ -24,7 +24,7 @@ libkdeprint_management_la_SOURCES = \
 	kmwsmb.cpp smbview.cpp kmconfigdialog.cpp kmconfigpage.cpp kmconfiggeneral.cpp kmspecialprinterdlg.cpp \
 	kmwlocal.cpp kiconselectaction.cpp kmconfigpreview.cpp sidepixmap.cpp \
 	pluginaction.cpp kxmlcommanddlg.cpp kxmlcommandselector.cpp kmconfigcommand.cpp \
-	kmconfigfilter.cpp kmconfigfonts.cpp
+	kmconfigfilter.cpp kmconfigfonts.cpp kmconfigjobs.cpp
 libkdeprint_management_la_LDFLAGS = $(all_libraries) -version-info 4:0 -no-undefined
 libkdeprint_management_la_LIBADD = ../libkdeprint.la
 libkdeprint_management_la_METASOURCES = AUTO
@@ -41,7 +41,7 @@ noinst_HEADERS = kmdbcreator.h kmdriverdb.h kmdriverdbwidget.h kmiconview.h \
 		 kmwclass.h kmwlpd.h kmwfile.h kmdriverdialog.h kmwsmb.h smbview.h kmconfigdialog.h kmconfigpage.h \
 		 kmconfiggeneral.h kmspecialprinterdlg.h kmwlocal.h kmconfigpreview.h sidepixmap.h \
 		 pluginaction.h kxmlcommanddlg.h kxmlcommandselector.h kmconfigcommand.h \
-		 kmconfigfilter.h kmconfigfonts.h
+		 kmconfigfilter.h kmconfigfonts.h kmconfigjobs.h
 
 dataicon_DATA = tileup.png tiledown.png side.png
 dataicondir = $(kde_datadir)/kdeprint
